--- a/style.css
+++ b/style.css
@@ -4,5 +4,18 @@ body{
 
 h2{
    background-color: #f1c40f;
-   border: 2px solid black;
+   color: #000000;
+   border: 2px solid #000000;
+}
+
+#astronomy-class{
+   color: #e74c3c;
+}
+
+div h3{
+   color: #f1c40f;
+}
+
+*{
+   color: #ffffff;
 }
